--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -90,13 +90,13 @@
                 <p>2. Upload the link which map to mod
                 <p>3. Wait.
                 <p>4. If he/she reject, and you really try hard to map, the map is clear(you can play),
-                <p>   switch to another modder. (fuck these selfless shits)
+                <p>   switch to another modder.(Maybe It's not pending or finish set so he/she reject)
                 <p>5. Done this stupid shit.
 
                 <br><br>
 
-                <p>Once the ten requests done, I'll count how many modders are polite/impolite.
-                <p>And show the possibility of accept rate + Who are polite/impolite to newbie mapper
+                <p>Once the ten requests done.
+                <p>I'll show the possibility of WIP's accept rate
 
                 <br><br>
 
