--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -17,7 +17,7 @@
             <h1>Setup & Preference</h1> 
             <h2>Intro</h2>
 
-            <p>osu sucks, player sucks.
+            <p>Fuck 1 miss.
 
             <div class="container">
                 <p>Setup:
