--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -90,13 +90,15 @@
                 <p>2. Upload the link which map to mod
                 <p>3. Wait.
                 <p>4. If he/she reject, and you really try hard to map, the map is clear(you can play),
-                <p>   switch to another modder.(Maybe It's not pending or finish set so he/she reject)
+                <p>   switch to another modder.(Maybe It's not in pending status or finish set so he/she reject)
                 <p>5. Done this stupid shit.
 
                 <br><br>
 
                 <p>Once the ten requests done.
-                <p>I'll show the possibility of WIP's accept rate
+                <p>I'll show the possibility of WIP map modding acceptable rate.
+                <p>Current: 3 rejects | 1 finish | 6 pending
+                <p>which is 1/10 - 10% chance can pass.
 
                 <br><br>
 
