--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -91,7 +91,7 @@
                 <p>3. Wait.
                 <p>4. If he/she reject, and you really try hard to map, the map is clear(you can play),
                 <p>   switch to another modder.(Maybe It's not in pending status or finish set so he/she reject)
-                <p>5. Done this stupid shit.
+                <p>5. Done.
 
                 <br><br>
 
@@ -99,6 +99,14 @@
                 <p>I'll show the possibility of WIP map modding acceptable rate.
                 <p>Current: 3 rejects | 1 finish | 6 pending
                 <p>which is 1/10 - 10% chance can pass.
+
+                <br><br>
+
+                <p>You know what? Map more is extremely hard for me.
+                <p>Why that? Less song attracts me.
+                <p>Picking songs is the most difficult part.
+                <p>For me, I cant map complex rhythm, or simple rhythm, or "repeat nightmare".
+                <p>If someone maps that song and ranked it, I have less chance to map that. 
 
                 <br><br>
 
