--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -95,6 +95,25 @@
 
                 <br><br>
 
+                <p>Overflow of a map:
+                <p>1.  Picking songs(VERY IMPORTANT, NOT ONLY your favourite songs)
+                <p>2.  Listen to music and put notes.
+                <p>3.  If done, play it by yourself first(I recommended PLAYABLE first).
+                <p>4.  Find mistakes by YOU as MUCH as possible.
+                <p>5.  If you think you can't find any problems, find modders.
+                <p>6.1 ISSUE MUST FIX.
+                <p>6.2 DO NOT ALWAYS follow modders ADVICE,
+                <p>    however, if you really get some mistakes just correct it.
+                <p>    But still, some little problems you are going to think why is that.
+                <p>6.3 I'm not sure for now, cause I'm mapping.
+                <p>7.  Hitsound your map and put some custom hitsound in it(hitsound MUST included). 
+                <p>8.  If you think the basic structure is done, put it to PENDING status.
+                <p>9.  Now, you must find some BNs to mod your map,
+                <p>    besides, try to get at least 5 hypes. 
+                <p>10. ...(I haven't reach this part)
+
+                <br><br>
+
                 <p>Once the ten requests done.
                 <p>I'll show the possibility of WIP map modding acceptable rate.
                 <p>Current: 3 rejects | 2 finish | 5 pending
