--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -96,14 +96,14 @@
                 <br><br>
 
                 <p>Overflow of a map:
-                <p>|-- Picking songs(VERY IMPORTANT, NOT ONLY your favourite songs).
+                <p>|-- Picking songs(+++important+++, not only your favourite songs).
                 <p>|-- Read rc(Ranking criteria).
                 <p>|-- Listen to music and put notes.
-                <p>|-- If done, play it by yourself first(I recommended PLAYABLE first).
-                <p>|-- Find mistakes by YOU as MUCH as possible.
+                <p>|-- If done, play it by yourself first(I recommended +playable+ first).
+                <p>|-- Find mistakes by +you+ as much as possible.
                 <p>|-- If you think you can't find any problems, find modders.
-                <p>&emsp;|-- ISSUE MUST FIX.
-                <p>&emsp;|-- DO NOT ALWAYS follow modders ADVICE,
+                <p>&emsp;|-- +Issue+ must fix.
+                <p>&emsp;|-- Do +not+ always follow modders +advice+,
                 <p>&emsp;|-- however, if you really get some mistakes just correct it.
                 <p>&emsp;|-- But still, some little problems you are going to think why is that.
                 <p>|-- Hitsound your map and put some custom hitsound in it(hitsound MUST included). 
@@ -111,6 +111,8 @@
                 <p>|-- Now, you must find some BNs to mod your map,
                 <p>|-- besides, try to get at least 5 hypes. 
                 <p>...
+                <p>And yes I really need contacts,
+                <p>otherwise I'm going to put a lot of time to rank(or never rank) one map.
 
                 <br><br>
 
