--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -76,9 +76,19 @@
                 <br><br>
 
                 <p>2. Map songs
+
+                <br><br>
+
+                <p>Before talking about mapping things, let me explain why I want to map songs.
+                <p>I like create/experience one things that attract me, especially those comfort flow.
+                <p>Also wants to try something like "rank a map" and more.
+                <p>Or should I say I like <span id="tg">studying</span> interesting things.
+
+                <br><br>
+
                 <p>Link for mod: https://osumod.com/
                 <p>Mod steps:
-                <p>1. <span id="im">Read the modder's preference(If fit you can upload , otherwise change)</span>.
+                <p>1. <span id="im">Read the modder's preference(If fit you can upload, otherwise change)</span>.
                 <p>2. Upload the link which map+diff to mod.
                 <p>3. Wait.
                 <p>4. If he/she reject, and you really try hard to map, the map is clear and <span id="su">you can play</span>,
@@ -103,7 +113,7 @@
                 <p>|-- Now, you must find some BNs to mod your map,
                 <p>|-- besides, try to get at least 5 hypes. 
                 <p>...
-                <p>And yes I really need contacts,
+                <p>And yes I really need <span id="tg">contacts</span>,
                 <p>otherwise I'm going to put a lot of time to rank(or never rank) one map.
 
                 <br><br>
@@ -115,7 +125,9 @@
 
                 <br><br>
 
+                <p><span id="im">Encouraging is a vital thing.</span>
                 <p><span id="im">Never request a modding queue which makes you uncomfortable</span>,
+                <p><span id="im">and I would FUCK Bloxi who SAY and TAG my map NOTINTEREST(fuckoff then)</span>.               
                 <p>such as "I mod what I like" or "long article of rules" or "a bunch of reject tags",
                 <p>always find easy queue like "casual" or "for newble"(idk how to say, its just feelings).
             </div>
