--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -82,7 +82,7 @@
                 <p>Before talking about mapping things, let me explain why I want to map songs.
                 <p>I like create/experience one things that attract me, especially those comfort flow.
                 <p>Also wants to try something like "rank a map" and more.
-                <p>Or should I say I like <span id="tg">studying</span> interesting things.
+                <p>Or should I say I like <span id="im">studying</span> interesting things.
 
                 <br><br>
 
@@ -108,10 +108,10 @@
                 <p id="tab">|-- Do <span id="im">not</span> always follow modders <span id="tg">advice</span>,
                 <p id="tab">|-- however, if you really get some mistakes then <span id="im">you should</span> correct it.
                 <p id="tab">|-- But still, some little problems you are going to think <span id="su">why</span> is that.
-                <p>|-- Hitsound your map and put some custom hitsound in it(hitsound <span id="im">must</span> included). 
+                <p>|-- Hitsound your map and put some custom hitsound in it(hitsound <span id="im">must</span> included).
                 <p>|-- If you think the basic structure is done, put it to <span id="tg">pending</span> status.
                 <p>|-- Now, you must find some BNs to mod your map,
-                <p>|-- besides, try to get at least 5 hypes. 
+                <p>|-- besides, try to get at least 5 hypes.
                 <p>...
                 <p>And yes I really need <span id="tg">contacts</span>,
                 <p>otherwise I'm going to put a lot of time to rank(or never rank) one map.
@@ -126,10 +126,9 @@
                 <br><br>
 
                 <p><span id="im">Encouraging is a vital thing.</span>
-                <p><span id="im">Never request a modding queue which makes you uncomfortable</span>,
-                <p><span id="im">and I would FUCK Bloxi who SAY and TAG my map NOTINTEREST(fuckoff then)</span>.               
-                <p>such as "I mod what I like" or "long article of rules" or "a bunch of reject tags",
-                <p>always find easy queue like "casual" or "for newble"(idk how to say, its just feelings).
+                <p><span id="im">Never request a modding queue which makes you uncomfortable</span>.
+                <p>Never request: "I mod what I like" or "long article of rules" or "a bunch of reject tags".s
+                <p>You should find "casual" or "for newble"(idk how to say, its just feelings).
             </div>
 
             <h2>Something like "Stable vs Lazer"</h2>
