--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -127,7 +127,7 @@
 
                 <p><span id="im">Encouraging is a vital thing.</span>
                 <p><span id="im">Never request a modding queue which makes you uncomfortable</span>.
-                <p>Never request: "I mod what I like" or "long article of rules" or "a bunch of reject tags".s
+                <p>Never request: "I mod what I like" or "long article of rules" or "a bunch of reject tags".
                 <p>You should find "casual" or "for newble"(idk how to say, its just feelings).
             </div>
 
@@ -137,6 +137,14 @@
                 <p>Lazer either, It's just too common. <span id="tiny">where's my skin interface?</span>
                 <p>Both of them are 'incomplete' project.
            </div>
+
+            <h2>About my name
+            <p>There's another game platform which is Roblox(my first ever game).
+            <p>And my account is called "cutt37".
+            <p>I'm lazy to think of any name so I used it.
+            <p>Since "cut hair" is relative to "scissor", I use the word "cut".
+            <p>For aesthetics I add a "t" so its "cutt".
+            <p>3+7=10 and 37 sounds cool so I use it.
         </div>
     </div>
 </body>
