--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -18,6 +18,16 @@
             <h2>Intro</h2>
 
             <div class="container">
+                <p>probably offline for a few days(very tired about osu).
+
+                <br><br>
+
+                <p><i>There are only two countries in this world,</i>
+                <p><i>One is China,</i>
+                <p><i>Another one is the foreigns except China.</i>
+
+                <br><br>
+
                 <p>Setup:
                 <p id="tab">Mouse: Logitech G102 (2 accel);
                 <p id="tab">Keyboard: Sayo O2C + Greywood v3 switch;
@@ -137,14 +147,6 @@
                 <p>Lazer either, It's just too common. <span id="tiny">where's my skin interface?</span>
                 <p>Both of them are 'incomplete' project.
            </div>
-
-            <h2>About my name
-            <p>There's another game platform which is Roblox(my first ever game).
-            <p>And my account is called "cutt37".
-            <p>I'm lazy to think of any name so I used it.
-            <p>Since "cut hair" is relative to "scissor", I use the word "cut".
-            <p>For aesthetics I add a "t" so its "cutt".
-            <p>3+7=10 and 37 sounds cool so I use it.
         </div>
     </div>
 </body>
