--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -92,7 +92,7 @@
                 <p>Before talking about mapping things, let me explain why I want to map songs.
                 <p>I like create/experience one things that attract me, especially those comfort flow.
                 <p>Also wants to try something like "rank a map" and more.
-                <p>Or should I say I like <span id="im">studying</span> interesting things.
+                <p>Or should I say I like studying interesting things.
 
                 <br><br>
 
@@ -114,7 +114,7 @@
                 <p>|-- If done, play it <span id="su">by yourself</span> first(I recommended <span id="tg">playable</span> first).
                 <p>|-- Find mistakes <span id="su">by you</span> as <span id="im">much</span> as possible.
                 <p>|-- If you think you can't find any problems, find modders.
-                <p id="tab">|-- <span id="tg">Issue</span> must fix.
+                <p id="tab">|-- <span id="tg">Issue</span> <span id="im">must</span> fix.
                 <p id="tab">|-- Do <span id="im">not</span> always follow modders <span id="tg">advice</span>,
                 <p id="tab">|-- however, if you really get some mistakes then <span id="im">you should</span> correct it.
                 <p id="tab">|-- But still, some little problems you are going to think <span id="su">why</span> is that.
@@ -141,11 +141,14 @@
                 <p>You should find "casual" or "for newble"(idk how to say, its just feelings).
             </div>
 
-            <h2>Something like "Stable vs Lazer"</h2>
+            <h2>About osu(including lazer)</h2>
             <div class="container">
-                <p>I can't think of any advantages of Stable, or maybe skin is an virtue?
-                <p>Lazer either, It's just too common. <span id="tiny">where's my skin interface?</span>
-                <p>Both of them are 'incomplete' project.
+                <p>Confusing offset, weird song editor, boring server, the player and osu game.
+                <p>Interface stupid and weird, skinning not so smart, lots of useless features.
+                <p>Strict ranking criteria(especially drain time), hard to map(unlike 4-key or multi-key rhythm games, basically they can map any song).
+                <p>Players not so kind, not so active.
+                <p>Community sucks about isolation + hating of every common players.
+                <p>...
            </div>
         </div>
     </div>
