--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -147,7 +147,7 @@
                 <p>Interface stupid and weird, skinning not so smart, lots of useless features.
                 <p>Strict ranking criteria(especially drain time), hard to map(unlike 4-key or multi-key rhythm games, basically they can map any song).
                 <p>Players not so kind, not so active.
-                <p>Community sucks about isolation + hating of every common players.
+                <p>Community of isolation and hating is so suck.
                 <p>...
            </div>
         </div>
