--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -141,14 +141,17 @@
                 <p>You should find "casual" or "for newble"(idk how to say, its just feelings).
             </div>
 
-            <h2>About osu(including lazer)</h2>
+            <h2>About osu</h2>
             <div class="container">
-                <p>Confusing offset, weird song editor, boring server, the player and osu game.
-                <p>Interface stupid and weird, skinning not so smart, lots of useless features.
-                <p>Strict ranking criteria(especially drain time), hard to map(unlike 4-key or multi-key rhythm games, basically they can map any song).
-                <p>Players not so kind, not so active.
-                <p>Community of isolation and hating is so suck.
-                <p>...
+                <p>offset - no, confusing, as well as hitting circles
+                <p>song editor - no, not so convinent and clean
+                <p>interesting - no, pretty boring
+                <p>the player - no, they are not so kind
+                <p>interface - no, "song select" not so reasonable and bad
+                <p>skinning - no, not so smart due to "song select" since everyone's display ratios are different.
+                <p>ranking a map - no, strict ranking criteria and no one wants to enjoy a newble's map
+                <p>community - no, isolation and hating is so suck 
+                <p>osu itself - yes, since its play style is unique from the other rhythm games
            </div>
         </div>
     </div>
