--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -18,7 +18,8 @@
             <h2>Intro</h2>
 
             <div class="container">
-                <p>probably offline for a few days(very tired about osu).
+                <p>probably offline(very tired about osu).
+                <p>active on mapping. 
 
                 <br><br>
 
@@ -80,50 +81,43 @@
                 <br><br>
 
                 <p>2. Map songs
-
+                <p>Mapping is a feeling thing.
+                <p>Prefer comfort/unique pattern than copy.
+                <p>btw sd_mango queue sucks, osumod is better than this trash.
+                
                 <br><br>
 
-                <p>Before talking about mapping things, let me explain why I want to map songs.
-                <p>I like create/experience one things that attract me, especially those comfort flow.
-                <p>Also wants to try something like "rank a map" and more.
-                <p>Or should I say I like studying interesting things.
-
+                <p>Difficulty(an example)
+                Hard:   cs3.6~4, hp5, ar8, od6, sv~1.4, sl~7
+                Insane: cs3.8~4, hp5, ar9, od8, sv~1.4, sl~7
+                About stack leniency
+                Mostly it would be:
+                Fast bpm(>= 180) / complex rhythm use lower stack leniency,
+                simple rhythm use higher stack leniency(>=5).
+                But always keep sl7 as default(if you cant find out).
                 <br><br>
 
-                <p>Link for mod: https://osumod.com/
-                <p>Mod steps:
-                <p>1. <span id="im">Read the modder's preference(If fit you can upload, otherwise change)</span>.
-                <p>2. Upload the link which map+diff to mod.
-                <p>3. Wait.
-                <p>4. If he/she reject, and you really try hard to map, the map is clear and <span id="su">you can play</span>,
-                <p>   switch to another modder.(Maybe It's not in pending status or finish set so he/she reject)
-                <p>5. Done.
-
-                <br><br>
-
-                <p>Overflow of a map:
+                <p>Workflow of a map:
                 <p>|-- Picking songs(<span id="im">important</span>, <span id="su">not only your favourite songs</span>).
-                <p>|-- <span id="su">Read rc(Ranking criteria)</span>.
-                <p>|-- Listen to music and put notes.
-                <p>|-- If done, play it <span id="su">by yourself</span> first(I recommended <span id="tg">playable</span> first).
-                <p>|-- Find mistakes <span id="su">by you</span> as <span id="im">much</span> as possible.
-                <p>|-- If you think you can't find any problems, find modders.
+                <p>|-- <span id="su">Read rc(ranking criteria)</span>.
+                <p>|-- Listen to music carefully(think about the genre, rhythm, bpm, difficulty...).
+                <p>|-- First play.
+                <p>|-- Find the problems.
+                <p>|-- If you think you can't find any problems, ask modders.
                 <p id="tab">|-- <span id="tg">Issue</span> <span id="im">must</span> fix.
                 <p id="tab">|-- Do <span id="im">not</span> always follow modders <span id="tg">advice</span>,
-                <p id="tab">|-- however, if you really get some mistakes then <span id="im">you should</span> correct it.
-                <p id="tab">|-- But still, some little problems you are going to think <span id="su">why</span> is that.
+                <p id="tab">|-- Choose what kind of advice you need.
                 <p>|-- Hitsound your map and put some custom hitsound in it(hitsound <span id="im">must</span> included).
-                <p>|-- If you think the basic structure is done, put it to <span id="tg">pending</span> status.
-                <p>|-- Now, you must find some BNs to mod your map,
+                <p>|-- If you think the base structure is done, put it to <span id="tg">pending</span> status.
+                <p>|-- Now, find some BNs to mod your map,
                 <p>|-- besides, try to get at least 5 hypes.
                 <p>...
-                <p>And yes I really need <span id="tg">contacts</span>,
+                <p>And yes I really need contacts,
                 <p>otherwise I'm going to put a lot of time to rank(or never rank) one map.
 
                 <br><br>
 
-                <p>Once the ten requests done.
-                <p>I'll show the possibility of WIP map modding acceptable rate.
+                <p>WIP map modding acceptable rate.
                 <p>Current: 3 rejects | 2 finish | 5 pending
                 <p>which is 1/5 - 20% chance can pass.
 
@@ -131,8 +125,6 @@
 
                 <p><span id="im">Encouraging is a vital thing.</span>
                 <p><span id="im">Never request a modding queue which makes you uncomfortable</span>.
-                <p>Never request: "I mod what I like" or "long article of rules" or "a bunch of reject tags".
-                <p>You should find "casual" or "for newble"(idk how to say, its just feelings).
             </div>
 
             <h2>About osu</h2>
@@ -142,7 +134,7 @@
                 <p>interesting - no, pretty boring
                 <p>the player - no, they are not so kind
                 <p>interface - no, "song select" not so reasonable and bad
-                <p>skinning - no, not so smart due to "song select" since everyone's display ratios are different.
+                <p>skinning - no, not so smart due to "song select" since everyone's display ratios are different
                 <p>ranking a map - no, strict ranking criteria and no one wants to enjoy a newble's map
                 <p>community - no, isolation and hating is so suck 
                 <p>osu itself - yes, since its play style is unique from the other rhythm games
